# zuicity

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  NOTICE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
crates/zuicity-benchmarks/: Cargo.toml  README.md
crates/zuicity-benchmarks/benches/: first_slice.rs
crates/zuicity-benchmarks/src/: lib.rs
crates/zuicity-benchmarks/tests/: comparative_smoke.rs  first_slice_smoke.rs
crates/zuicity-cli/: Cargo.toml  build.rs
crates/zuicity-cli/src/: lib.rs
crates/zuicity-cli/tests/: run_runtime.rs  server_helper_runtime.rs
crates/zuicity-client/: Cargo.toml
crates/zuicity-client/src/: lib.rs
crates/zuicity-client/tests/: upstream_tcp_interop.rs
crates/zuicity-config/: Cargo.toml
crates/zuicity-config/src/: lib.rs
crates/zuicity-dae/: Cargo.toml
crates/zuicity-dae/src/: lib.rs
crates/zuicity-protocol/: Cargo.toml
crates/zuicity-protocol/src/: lib.rs
crates/zuicity-protocol/tests/fixtures/: certchain.pem
crates/zuicity-server/: Cargo.toml
crates/zuicity-server/src/: lib.rs
crates/zuicity-server/tests/: high_pressure_leak.rs  upstream_client_interop.rs
crates/zuicity-testkit/: Cargo.toml
crates/zuicity-testkit/src/: lib.rs
crates/zuicity-transport/: Cargo.toml
crates/zuicity-transport/src/: lib.rs
crates/zuicity-transport/tests/: dialer_link_differential.rs
differential/oracle/: .gitignore  go.mod  go.sum  main.go
docs/: packaging.md  performance-analysis.md
docs/benchmark-evidence/v0.2.2/veth/: README.md  SHA256SUMS  binaries.sha256  results.jsonl  rss.jsonl
docs/benchmarks/: benchmark-chart.md  benchmark-comparison.xlsx  memory.jsonl  results.jsonl
docs/releases/: v0.2.2.md
install/: example-client.json  example-server.json  friendly-filenames.json  zuicity-client.service  zuicity-server.service
packaging/: nfpm.yaml
packaging/systemd/: postinstall.sh
scripts/: benchmark-package-release.sh  build-portable.sh  deployment-smoke.sh  package-apk-native.sh  package-apk-smoke.sh  package-deb-smoke.sh  package-release.sh  package-rpm-smoke.sh  render-benchmark-chart.py  render-benchmark-xlsx.py  validate-packaging.py
scripts/benchmark/: README.md  bench-one.sh  driver.py  echo-server.py  run-comparison.sh
scripts/repro/datagram-too-large/: README.md  bidirectional_repro.py  router_probe.py  tcp_echo.py  tcp_echo_client.py  tcp_source.py  udp_burst.py  udp_echo.py  udp_reply_source.py  udp_sweep.py
