[workspace]
members = [
    "crates/zuicity-protocol",
    "crates/zuicity-transport",
    "crates/zuicity-config",
    "crates/zuicity-client",
    "crates/zuicity-server",
    "crates/zuicity-cli",
    "crates/zuicity-dae",
    "crates/zuicity-benchmarks",
    "crates/zuicity-testkit",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/teracoot/zuicity"
rust-version = "1.96"
version = "0.2.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_enum = "warn"
missing_errors_doc = "allow"
panic = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"

[workspace.dependencies]
anyhow = "1"
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
bytes = "1"
crc32fast = "1"
getrandom = "0.2"
hmac = "0.12"
md5 = { package = "md-5", version = "0.10" }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
hex = "0.4"
libc = "0.2"
pin-project-lite = "0.2"
proptest = "1"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.6", features = ["all"] }
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
shadowsocks = { version = "1.24.0", default-features = false, features = ["aead-cipher"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time", "io-util"] }
tokio-rustls = "0.26.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
webpki-roots = "1.0.7"
x509-parser = "0.17"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
