[package]
name = "zuicity-benchmarks"
description = "Production benchmark harness for Zuicity Rust runtime paths."
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true
autobenches = false

[lints]
workspace = true

[dependencies]
zuicity-client = { path = "../zuicity-client" }
anyhow.workspace = true
zuicity-config = { path = "../zuicity-config" }
zuicity-dae = { path = "../zuicity-dae" }
zuicity-server = { path = "../zuicity-server" }
zuicity-testkit = { path = "../zuicity-testkit" }
zuicity-transport = { path = "../zuicity-transport" }
rcgen.workspace = true
socket2.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "first_slice"
path = "benches/first_slice.rs"
harness = false
