[package]
name = "zuicity-server"
description = "Embeddable Zuicity server runtime."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zuicity-config = { path = "../zuicity-config" }
zuicity-protocol = { path = "../zuicity-protocol" }
zuicity-transport = { path = "../zuicity-transport" }

uuid.workspace = true
[dev-dependencies]
base64.workspace = true
zuicity-testkit = { path = "../zuicity-testkit" }
rcgen.workspace = true
shadowsocks.workspace = true
tokio-rustls.workspace = true
tracing-subscriber.workspace = true
aes.workspace = true
aes-gcm.workspace = true
crc32fast.workspace = true
hmac.workspace = true
md5.workspace = true
sha2.workspace = true
sha3.workspace = true
